--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.7.1",
     "@prisma/client": "^6.0.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
