--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@clerk/nextjs": "^6.7.1",
     "@prisma/client": "^6.0.1",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.54.1",
     "sass": "^1.81.1"
   },
   "devDependencies": {
