Update .env example

--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
 DATABASE_URL="file:./dev.db"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL="/login"
 CLERK_SECRET_KEY=
