--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "npx tsx seed.ts"
+    "seed": "dotenv -e .env.local -- npx tsx seed.ts",
+    "migrate:postgres": "dotenv -e .env.local -- npx prisma migrate dev"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.7.1",
